Keycloak (user+Api Gateway) + correction erreurs