@@ -5,7 +5,6 @@ import com.brainwaves.evenementservice.repository.EvenementRepository;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cloud.context.config.annotation.RefreshScope;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
@@ -29,11 +28,10 @@ public class EvenementController {
 
     @GetMapping("/config/message")
     public Map<String, String> getConfigMessage() {
-        return Map.of("message", evenementMessage);
+        return java.util.Collections.singletonMap("message", evenementMessage);
     }
 
     @PostMapping
-    @PreAuthorize("hasRole('USER')")
     public Evenement create(@RequestBody Evenement evenement) {
         return repository.save(evenement);
     }
@@ -50,7 +48,6 @@ public class EvenementController {
     }
 
     @PutMapping("/{id}")
-    @PreAuthorize("hasRole('ADMIN')")
     public Evenement update(@PathVariable Long id, @RequestBody Evenement updatedEvent) {
         return repository.findById(id)
                 .map(event -> {
@@ -64,7 +61,6 @@ public class EvenementController {
     }
 
     @DeleteMapping("/{id}")
-    @PreAuthorize("hasRole('ADMIN')")
     public void delete(@PathVariable Long id) {
         if (!repository.existsById(id)) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Evenement not found");
